--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Маджонг патріота</title>
+    <title>Маджонг-UKRAINE</title>
     <link rel="stylesheet" href="style.css">
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   </head>
   <body>
 <button class="reset">reset</button>
